@@ -49,7 +49,7 @@ def usage(mode=0) :
            '\n  %prog -e mfxx32516 -d NoDetector.0:Epix10ka.3 -r 1021 -t 20180910111049 -x /reg/d/psdm/mfx/mfxx32516/scratch/gabriel/pulser/xtc/combined -o ./myrepo -c ./calib -L info -D'\
            '\nREGULAR COMMAND:'\
            '\n  %prog -e mfxx32516 -d NoDetector.0:Epix10ka.3 -r 1021 -D'\
-           '\n  %prog -e xcsx35617 -d XcsEndstation.0:Epix10ka2M.0 -r6'
+           '\n  %prog -e xcsx35617 -d XcsEndstation.0:Epix10ka2M.0 -r6 -o ./work'
 
 #------------------------------
 
